[project]
name = "controls-pyutils"   # install name: uv add controls-pyutils
version = "0.1.0"
description = "Personal Python utilities for control theory and simulations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "matplotlib",
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"
